# mercari_bot

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierrc.yaml  .yamlfmt  Dockerfile  LICENSE  README.md  compose.yaml  config.example.yaml  config.example.yml  config.schema  config.yml.example  install.zsh  mercari_bot.py  pyproject.toml  renovate.json  requirements.txt
.github/workflows/: docker.yaml
app/: mercari_bot.py
kubernetes/: mercari-bot.yaml
lib/: captcha.py  captcha_slack.py  config.py  footprint.py  mercari.py  mercari_price_down.py  notify_mail.py  notify_slack.py  selenium_util.py
script/: docker_run.zsh  registry_push.zsh
src/: app.py  captcha.py  config.py  logger.py  mercari.py  mercari_bot.py  notifier.py  notify_slack.py  selenium_util.py
src/mercari_bot/: mercari_price_down.py
